--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.2",
     "firebase": "^9.9.3",
+    "firebase-tools": "^11.19.0",
     "i18next": "^22.0.8",
     "i18next-http-backend": "^2.0.2",
     "install": "^0.13.0",
